--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="quiz_frame_title">SPAI Quiz</string>
+    <string name="go_to_login"><u>Go to login</u></string>
 </resources>
